support all mc fabric versions of replaymod